059 ==> 115753 - Option to apply unsharp masking to luma channel only [patch].
060 ==> 376409 - Export doesn't work on Windows
061 ==> 376423 - Inconsistent ENTER key in thumbnails view.
062 ==> 376489 - Crash with Pentax K-5 DNG files.
063 ==> 376621 - Cannot Enter Data In Geolocation Editor Details Tab.
064 ==> 376650 - Write Meta Data hangs if album is empty.
065 ==> 375199 - Metadata Synchronizer Tool is not working for subfolders.
066 ==> 375796 - Barel Effect Apperaing on Images RAW RW2 Panasonic Format.
067 ==> 376331 - Path when saving/opening presentation files should be remebered.
068 ==> 375416 - Frequent crashes when applying faces.
069 ==> 301048 - BQM Watermark tool : more super-impose visible watermark options [patch].
070 ==> 123097 - SCAN : ignore some directories in digiKam [patch].
071 ==> 283062 - THUMBDB : limit the size of thumbnail database
072 ==> 216895 - SQLITE : improve performance and reduce space with some pragma's
073 ==> 374225 - Add possibility to remove face identities by removing tag and remove person tags but preserving the tags themselves [patch]
074 ==> 376815 - Restore from Trash works incorrectly.
075 ==> 376820 - Make mime type settings GUI more consistent [patch].
076 ==> 376615 - Missing icon in GNOME shell dock.
077 ==> 376885 - The setting 'Always show original images' cannot be disabled in 5.5.0.
078 ==> 376721 - Poor quality colour management in Preview vs Editor.
079 ==> 376898 - Crash when scanning photo containing exif with empty Jis comment (Digikam::MetaEngine::getExifComment, QTextCodec::toUnicode) [patch].
080 ==> 374248 - importing photo, bad file selector.
081 ==> 376530 - Map jumps to 0/0 position when using "Zoom into a group".
082 ==> 376928 - Changes on mimetypes are applied after restart [patch].
083 ==> 377011 - A list of dependencies for setting up development environment.
084 ==> 376020 - Moving of photos within the fuzzy search corrupts database
085 ==>
